--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>MY RESUME</h1>
-        <h2> Summary</h2>
+        <h2> Summary of the resume</h2>
         <p>This is the list of my achievements that I HAVE TO apply for this job</p>
         <l1><a href="./skills.html"> skills</a><l1><br/>
         <a href="./work experience.html">experience</a>
